syntax = "proto3";

option csharp_namespace = "PDM.Core.Test.ProtoBuf";

message TwoFields {
  string StringValue = 10;
  int32 IntegerValue = 20;
}
